--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^1.6.8",
         "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
         "express": "^4.18.1",
         "node-fetch": "^3.3.2",
         "nodemon": "^3.1.0"
