--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,18 @@ services:
       - ./backend:/app  # Optional: For live reloading in development
       - backend_node_modules:/app/node_modules
 
+
+  caddy:
+    image: caddy:2
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
 volumes:
   frontend_node_modules:
   backend_node_modules:
+  caddy_data:
+  caddy_config:
