update the caddy file and docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,10 @@ services:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
+      - caddy_site:/var/www/html
 volumes:
   frontend_node_modules:
   backend_node_modules:
   caddy_data:
   caddy_config:
+  caddy_site: {}
